src/main/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teams-api
  namespace: wc2026
spec:
  rules:
    - host: api.wc2026.motojoapps.com
      http:
        paths:
          - backend:
              service:
                name: teams-api
                port:
                  name: http
            path: /teams
            pathType: Prefix
  ingressClassName: nginx
